BooksStueded/ThinkingInJava/src/test/Test5.java
package test;

// error
public class Test5 <T>/* extends Throwable */{
	static void f(){}
	public static void main( String[] args ){
		
	}
}